Move WorkflowGraphBuilder and related classes to flux-common.
https://github.com/danielgmyers/flux-swf-client/issues/94